# fcitx-imlist

./: .gitignore  .travis.yml  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  fcitx-imlist.1.xml  fcitx-imlist.manpages  rules  watch
examples/: Makefile.am  org.xdump.fcitximlist.gschema.xml
src/: Makefile.am  fcitximlist.c
